--- a/projectDetails.json
+++ b/projectDetails.json
@@ -160,6 +160,15 @@
         "href2":"https://github.com/kalanaveen/modern-blog",
         "desc":"Build a modern blog application with help of modern technologies like Reactjs,Nextjs. In this build created a home page and post detail page.All post fetched from GraphCMS with help of Graphql query.",
         "tech":["React JS","Next Js","Tailwind CSS","Graphql","GraphCMS"]
+      },
+      { 
+        "number":"19",
+        "image":"/images/shareme.png",
+        "title":"Share Me",
+        "href1":"https://shareme-frontend-kalanaveen.vercel.app/",
+        "href2":"https://github.com/kalanaveen/shareme-frontend",
+        "desc":"Build a ShareMe application with technoligies like Next JS ,Tailwind Css and Sanity,in this application we can post a photo,comment on post and see user profile.We can also search a post.",
+        "tech":["React JS","Next Js","Tailwind CSS","Sanity","Masonry Layout"]
       }
 ]
 
